# r_three

./: Cargo.toml  LICENSE  code_lines.py  code_lines.sh
example/window/: Cargo.toml
example/window/src/: app.rs  main.rs
r_three/: Cargo.toml
r_three/src/: app.rs  lib.rs  scene.rs
r_three/src/camera/: mod.rs  orthographic_camera.rs  perspective_camera.rs
r_three/src/core/: buffer_attribute.rs  buffer_geometry.rs  group.rs  mod.rs  object.rs  object_tree.rs  tree.rs
r_three/src/event/: mod.rs  user_event.rs
r_three/src/geometries/: box_geometry.rs  circle_geometry.rs  mod.rs  shape_geometry.rs
r_three/src/materials/: line_basic_material.rs  mesh_basic_material.rs  mod.rs
r_three/src/objects/: line.rs  mesh.rs  mod.rs
r_three/src/renderer/: mod.rs  vertex.rs  wgpu_renderer.rs
r_three/src/renderer/opengl/: mod.rs
r_three/src/renderer/pipelines/: mesh.rs  mod.rs  pipeline_storage.rs
r_three/src/renderer/primitive/: mesh.rs  mod.rs
r_three/src/renderer/shaders/: mesh.wgsl  mod.rs  texture.wgsl
r_three/src/renderer/wgpu/: context.rs  mod.rs  wgpu_renderer.rs
r_three/src/renderer/wgpu/objects/: mod.rs
r_three/src/renderer/wgpu/pipelines/: mesh.rs  mod.rs
r_three/src/renderer/wgpu/shaders/: mesh.wgsl
r_three/src/util/: color.rs
r_three_macro/: Cargo.toml
r_three_macro/src/: lib.rs
