[package]
name = "r_three"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
r_three_macro.workspace = true


wgpu = { version = "22.0" }
winit = { version = "0.30.5" }
cfg-if = "1.0.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3.36", features = ["macros"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.89"
pollster = "0.3.0"
once_cell = "1.20.1"

glam = "0.29.0"
serde = { version = "1.0.210", features = ["derive"] }
bytemuck = { version = "1.18.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Window", "Document", "Element"] }

[features]
default = ["wgpu"]
wgpu = []
opengl = []