[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
r_three.workspace = true


wgpu = { version = "22.0" }
winit = { version = "0.30.5" }
cfg-if = "1.0.0"
tracing = "0.1.40"
log = "0.4.22"
pollster = "0.3.0"
once_cell = "1.20.1"
tracing-subscriber = "0.3.18"
glam = "0.29.0"
serde = { version = "1.0.210", features = ["derive"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
tokio = { version = "1.40.0", features = ["default", "macros"] }
anyhow = "1.0.89"
tracing-core = "0.1.32"